# decompress

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  decompress
src/: main.c  zip_parser.c  zip_parser.h  zip_records.c  zip_records.h
